cmake_minimum_required(VERSION 3.28)

project(advent-2023)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_BUILD_TYPE Debug)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3-1 3-1.cpp)
add_executable(3-2 3-2.cpp)
add_executable(4-1 4-1.cpp)
add_executable(4-2 4-2.cpp)
